atlas/main/default/objects/Rate_Confirmation__c/Rate_Confirmation__c.object-meta.xml
<CustomObject>
    <label>Rate Confirmation</label>
    <nameField>
        <displayFormat>RC-{00000}</displayFormat>
        <label>Confirmation Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Rate Confirmations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>