atlas/main/default/objects/Rate_Confirmation__c/fields/Agreed_Rate__c.field-meta.xml
<CustomField>
    <fullName>Agreed_Rate__c</fullName>
    <label>Agreed Rate</label>
    <precision>10</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>