atlas/main/default/objects/Rate_Confirmation__c/fields/Carrier__c.field-meta.xml
<CustomField>
    <fullName>Carrier__c</fullName>
    <label>Carrier</label>
    <referenceTo>Carrier__c</referenceTo>
    <relationshipLabel>Rate Confirmations</relationshipLabel>
    <relationshipName>Rate_Confirmations</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>