atlas/main/default/objects/Rate_Confirmation__c/fields/Carrier_Confirmed__c.field-meta.xml
<CustomField>
    <fullName>Carrier_Confirmed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Carrier Confirmed</label>
    <type>Checkbox</type>
</CustomField>