atlas/main/default/objects/Rate_Confirmation__c/fields/Load__c.field-meta.xml
<CustomField>
    <fullName>Load__c</fullName>
    <label>Load</label>
    <referenceTo>Load__c</referenceTo>
    <relationshipLabel>Rate Confirmations</relationshipLabel>
    <relationshipName>Rate_Confirmations</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>