atlas/main/default/objects/Rate_Confirmation__c/fields/Sent_Via__c.field-meta.xml
<CustomField>
    <fullName>Sent_Via__c</fullName>
    <label>Sent Via</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>Email</fullName><default>false</default><label>Email</label></value>
            <value><fullName>SMS</fullName><default>false</default><label>SMS</label></value>
            <value><fullName>Email and SMS</fullName><default>true</default><label>Email and SMS</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>