atlas/main/default/objects/Rate_Confirmation__c/fields/TMS_Load_ID__c.field-meta.xml
<CustomField>
    <fullName>TMS_Load_ID__c</fullName>
    <label>TMS Load ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>