atlas/main/default/objects/Rate_Confirmation__c/fields/TMS_Push_Status__c.field-meta.xml
<CustomField>
    <fullName>TMS_Push_Status__c</fullName>
    <label>TMS Push Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>Pending</fullName><default>true</default><label>Pending</label></value>
            <value><fullName>Sent</fullName><default>false</default><label>Sent</label></value>
            <value><fullName>Failed</fullName><default>false</default><label>Failed</label></value>
            <value><fullName>Not Required</fullName><default>false</default><label>Not Required</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>